[package]
name = "swap_map"
version = "0.1.0"
edition = "2024"
description = "A thread-safe, lock-free, immutable map that can be atomically swapped"
license = "MIT"
repository = "https://github.com/MaxTMahem/swap_map"
homepage = "https://github.com/MaxTMahem/swap_map"
# documentation = "https://docs.rs/swap_map"
readme = "README.md"
keywords = ["map", "thread-safe", "immutable", "frozen"]
categories = ["data-structures", "rust-patterns"]
authors = ["Austin Stanley <MaxTMahem@gmail.com>"]

[dependencies]
arc-swap = "1.7.1"
derive_more = { version = "2.0.1", features = ["debug", "is_variant"] }
frozen-collections = "0.8.0"
tap = "1.0.1"
fluent_result = { git = "https://github.com/MaxMahem/fluent_result.git" }
thiserror = "2.0.17"

[dev-dependencies]
assert_unordered = "0.3.5"
assertables = "9.8.2"
