[package]
name = "share_map"
version = "0.1.0"
edition = "2024"
description = "An immutable map designed for shared ownership"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MaxTMahem/share_map"
homepage = "https://github.com/MaxTMahem/share_map"
documentation = "https://maxmahem.github.io/share_map/"
readme = "README.md"
keywords = ["map", "thread-safe", "immutable", "frozen"]
categories = ["data-structures", "rust-patterns"]
authors = ["Austin Stanley <MaxTMahem@gmail.com>"]

[features]
serde = ["dep:serde"]

[dependencies]
arc-swap = "1.7.1"
frozen-collections = "0.8.0"
tap = "1.0.1"
fluent_result = { git = "https://github.com/MaxMahem/fluent_result.git" }
collect_failable = { git = "https://github.com/MaxMahem/collect_failable.git" }
thiserror = "2.0.17"
serde = { version = "1.0.228", optional = true }

[dev-dependencies]
assert_unordered = "0.3.5"
assertables = "9.8.2"
serde_json = "1.0.145"
